--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>
             The terms used in this Privacy Policy have the same meanings
             as in our Terms and Conditions, which is accessible at
-            Сапер обычный unless otherwise defined in this Privacy Policy.
+            "Сапер обычный" unless otherwise defined in this Privacy Policy.
         </p> 
 
         <p>
